// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuickViewButton /> should works with default props 1`] = `
<ForwardRef
  className="btn"
  onClick={[MockFunction]}
  size={15}
>
  <ForwardRef(SvgQuickView)
    className="root btn"
    data-testid="quick-view-button"
    height={24}
    onClick={[MockFunction]}
    role="button"
    size={15}
    title="Быстрый просмотр"
    width={24}
  >
    <svg
      className="root btn"
      data-testid="quick-view-button"
      height={24}
      onClick={[MockFunction]}
      role="button"
      size={15}
      title="Быстрый просмотр"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0111.5 20.5a9 9 0 119-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 01-2.122 2.122zM9 10h1V9a1.5 1.5 0 113 0v1h1a1.5 1.5 0 110 3h-1v1a1.5 1.5 0 11-3 0v-1H9a1.5 1.5 0 110-3zm2.5-4.5a6 6 0 100 12 6 6 0 000-12z"
      />
    </svg>
  </ForwardRef(SvgQuickView)>
</ForwardRef>
`;

exports[`<QuickViewButton /> should works without props 1`] = `
<ForwardRef>
  <ForwardRef(SvgQuickView)
    className="root"
    data-testid="quick-view-button"
    height={24}
    role="button"
    title="Быстрый просмотр"
    width={24}
  >
    <svg
      className="root"
      data-testid="quick-view-button"
      height={24}
      role="button"
      title="Быстрый просмотр"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.94 22.06l-3.219-3.217-.339.22A8.956 8.956 0 0111.5 20.5a9 9 0 119-9c0 1.8-.528 3.476-1.438 4.882l-.22.34 3.219 3.217a1.5 1.5 0 01-2.122 2.122zM9 10h1V9a1.5 1.5 0 113 0v1h1a1.5 1.5 0 110 3h-1v1a1.5 1.5 0 11-3 0v-1H9a1.5 1.5 0 110-3zm2.5-4.5a6 6 0 100 12 6 6 0 000-12z"
      />
    </svg>
  </ForwardRef(SvgQuickView)>
</ForwardRef>
`;
